--- a/app/src/main/res/layout/activity_movie.xml
+++ b/app/src/main/res/layout/activity_movie.xml
@@ -88,254 +88,12 @@
             </android.support.constraint.ConstraintLayout>
         </android.support.design.widget.AppBarLayout>
 
-        <android.support.v4.widget.NestedScrollView
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_markets"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#f6f6f6"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
-            <android.support.constraint.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <ImageView
-                    android:id="@+id/iv_edit_base"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:padding="8dp"
-                    android:background="?android:attr/selectableItemBackgroundBorderless"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/ic_edit_grey_700_24dp" />
-
-                <TextView
-                    android:id="@+id/tv_title_base"
-                    android:text="Basic Information"
-                    style="@style/TvMovieTitleBase"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@id/iv_edit_base"
-                    app:layout_constraintBottom_toBottomOf="@id/iv_edit_base" />
-
-                <RelativeLayout
-                    android:id="@+id/rl_budget"
-                    style="@style/GroupMovieParam"
-                    android:layout_marginTop="16dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_title_base">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:text="Budget"/>
-                    <TextView
-                        android:id="@+id/tv_budget"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"
-                        android:text="@{model.movieBudget}"/>
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:background="@color/divider"
-                        android:layout_alignParentBottom="true"/>
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:id="@+id/rl_exchange"
-                    style="@style/GroupMovieParam"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/rl_budget">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:text="Exchange Rate"/>
-                    <TextView
-                        android:id="@+id/tv_exchange"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"
-                        android:text="@{model.movieExchangeRate}"/>
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:background="@color/divider"
-                        android:layout_alignParentBottom="true"/>
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:id="@+id/rl_mojo"
-                    style="@style/GroupMovieParam"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/rl_exchange">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:text="@{model.mojoTitle}"/>
-                    <TextView
-                        android:id="@+id/tv_mojo"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"
-                        android:text="@{model.movieMojoId}"/>
-                </RelativeLayout>
-
-                <TextView
-                    android:id="@+id/tv_title_gross"
-                    android:text="Gross"
-                    style="@style/TvMovieParamTitle"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/rl_mojo" />
-
-                <RelativeLayout
-                    android:id="@+id/rl_na"
-                    style="@style/GroupMovieParam"
-                    android:layout_marginTop="16dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_title_gross">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:text="North America"/>
-                    <TextView
-                        android:id="@+id/tv_na"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"
-                        android:textColor="@color/text_red"
-                        android:text="@{model.grossNa}"/>
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:background="@color/divider"
-                        android:layout_alignParentBottom="true"/>
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:id="@+id/rl_chn"
-                    style="@style/GroupMovieParam"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/rl_na">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:text="China"/>
-                    <TextView
-                        android:id="@+id/tv_chn"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"
-                        android:textColor="@color/text_red"
-                        android:text="@{model.grossChn}"/>
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:background="@color/divider"
-                        android:layout_alignParentBottom="true"/>
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:id="@+id/rl_oversea"
-                    style="@style/GroupMovieParam"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/rl_chn">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:text="Oversea"/>
-                    <TextView
-                        android:id="@+id/tv_oversea"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"
-                        android:textColor="@color/text_red"
-                        android:text="@{model.grossOversea}"/>
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:background="@color/divider"
-                        android:layout_alignParentBottom="true"/>
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:id="@+id/rl_ww"
-                    style="@style/GroupMovieParam"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/rl_oversea">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:text="World Wide"/>
-                    <TextView
-                        android:id="@+id/tv_ww"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"
-                        android:textColor="@color/text_red"
-                        android:text="@{model.grossWorldWide}"/>
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:background="@color/divider"
-                        android:layout_alignParentBottom="true"/>
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:id="@+id/rl_market"
-                    style="@style/GroupMovieParam"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/rl_ww">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:text="Market(Except North America)"/>
-                    <TextView
-                        android:id="@+id/tv_market"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"
-                        android:text="@{model.grossMarket}"/>
-                </RelativeLayout>
-
-                <TextView
-                    android:id="@+id/tv_market_rank"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="56dp"
-                    android:paddingLeft="16dp"
-                    android:paddingRight="16dp"
-                    android:textColor="@color/text_second"
-                    android:text="@{model.marketRankInfo}"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/rl_market"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
-            </android.support.constraint.ConstraintLayout>
-        </android.support.v4.widget.NestedScrollView>
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
     </android.support.design.widget.CoordinatorLayout>
 </layout>
