--- a/app/src/main/res/layout/fragment_rank.xml
+++ b/app/src/main/res/layout/fragment_rank.xml
@@ -105,7 +105,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="right"
                 android:visibility="@{model.titleRateVisibility}"
-                android:text="占比"/>
+                android:text="@{model.titleRateText}"/>
         </LinearLayout>
 
         <android.support.v7.widget.RecyclerView
