--- a/app/src/main/res/layout/adapter_movie_market_item.xml
+++ b/app/src/main/res/layout/adapter_movie_market_item.xml
@@ -15,7 +15,7 @@
             android:layout_width="100dp"
             android:layout_height="60dp"
             android:scaleType="fitXY"
-            app:marketFlag="@{bean.market.imageUrl}"
+            app:marketFlag="@{bean.imageUrl}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
