--- a/app/src/main/res/menu/movie_list_group.xml
+++ b/app/src/main/res/menu/movie_list_group.xml
@@ -5,6 +5,10 @@
         android:title="Index"
         android:icon="@drawable/ic_sort_by_alpha_grey_800_24dp"
         app:showAsAction="ifRoom"/>
+    <item android:id="@+id/menu_ratings"
+        android:title="Ratings"
+        android:icon="@drawable/ic_thumb_up_grey_800_24dp"
+        app:showAsAction="ifRoom"/>
     <item android:id="@+id/menu_top"
         android:title="Go Top"
         android:icon="@drawable/ic_arrow_upward_grey_800_24dp"
