--- a/app/src/main/res/menu/rating_page.xml
+++ b/app/src/main/res/menu/rating_page.xml
@@ -2,7 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/menu_edit"
-        android:title="Movies"
+        android:title="Edit"
         android:icon="@drawable/ic_edit_white_24dp"
+        app:showAsAction="ifRoom"/>
+    <item android:id="@+id/menu_sort"
+        android:title="Sort"
+        android:icon="@drawable/ic_sort_white_24dp"
         app:showAsAction="ifRoom"/>
 </menu>
