--- a/app/src/main/res/layout/adapter_movie_basic.xml
+++ b/app/src/main/res/layout/adapter_movie_basic.xml
@@ -99,6 +99,58 @@
                 android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
                 android:text="@{data.mojoId}"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/divider"
+                android:layout_alignParentBottom="true"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/rl_mojo_grp"
+            style="@style/GroupMovieParam"
+            android:visibility="@{data.mojoGrpVisibility}"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/rl_mojo">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:text="Mojo GroupId"/>
+            <TextView
+                android:id="@+id/tv_mojo_grp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:text="@{data.mojoGrpId}"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/divider"
+                android:layout_alignParentBottom="true"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/rl_mojo_title"
+            style="@style/GroupMovieParam"
+            android:visibility="@{data.mojoTitleVisibility}"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/rl_mojo_grp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:text="Mojo TitleId"/>
+            <TextView
+                android:id="@+id/tv_mojo_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:text="@{data.mojoTitleId}"/>
         </RelativeLayout>
 
         <TextView
@@ -106,7 +158,7 @@
             android:text="Gross"
             style="@style/TvMovieParamTitle"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/rl_mojo" />
+            app:layout_constraintTop_toBottomOf="@id/rl_mojo_title" />
 
         <RelativeLayout
             android:id="@+id/rl_na"
