--- a/app/src/main/res/layout/fragment_edit_movie.xml
+++ b/app/src/main/res/layout/fragment_edit_movie.xml
@@ -103,6 +103,57 @@
             app:layout_constraintTop_toBottomOf="@+id/et_budget" />
 
         <TextView
+            android:id="@+id/tv_title_mojo_grp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="Mojo GroupId"
+            app:layout_constraintBottom_toBottomOf="@+id/et_mojo_grp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/et_mojo_grp" />
+
+        <EditText
+            android:id="@+id/et_mojo_grp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="12dp"
+            app:layout_constraintEnd_toEndOf="@+id/et_mojo"
+            app:layout_constraintStart_toEndOf="@+id/tv_title_mojo_grp"
+            app:layout_constraintTop_toBottomOf="@+id/et_mojo" />
+
+        <TextView
+            android:id="@+id/tv_title_mojo_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="Mojo TitleId"
+            app:layout_constraintBottom_toBottomOf="@+id/et_mojo_title"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/et_mojo_title" />
+
+        <EditText
+            android:id="@+id/et_mojo_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="12dp"
+            app:layout_constraintEnd_toStartOf="@+id/btn_budget"
+            app:layout_constraintStart_toEndOf="@+id/tv_title_mojo_grp"
+            app:layout_constraintTop_toBottomOf="@+id/et_mojo_grp" />
+
+        <Button
+            android:id="@+id/btn_budget"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:text="Get Budget"
+            android:textAllCaps="false"
+            app:layout_constraintBottom_toBottomOf="@+id/et_mojo_title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/et_mojo_title" />
+
+        <TextView
             android:id="@+id/tv_ok"
             style="@style/TvDialogConfirm"
             android:text="@string/ok"
@@ -133,7 +184,7 @@
             android:textAllCaps="false"
             app:layout_constraintBottom_toTopOf="@+id/tv_ok"
             app:layout_constraintStart_toEndOf="@+id/tv_title_date"
-            app:layout_constraintTop_toBottomOf="@+id/et_mojo"
+            app:layout_constraintTop_toBottomOf="@+id/et_mojo_title"
             app:layout_constraintVertical_bias="0.0" />
 
         <CheckBox
